@@ -1,5 +1,5 @@
 /*
- * Copyright 2022-2023 Crown Copyright
+ * Copyright 2022-2024 Crown Copyright
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,18 +21,14 @@ import org.junit.jupiter.api.Test;
 import sleeper.compaction.job.CompactionJob;
 import sleeper.configuration.properties.instance.InstanceProperties;
 import sleeper.configuration.properties.table.TableProperties;
-import sleeper.core.partition.Partition;
-import sleeper.core.range.Range;
-import sleeper.core.range.Range.RangeFactory;
-import sleeper.core.range.Region;
+import sleeper.core.partition.PartitionsBuilder;
 import sleeper.core.schema.Field;
 import sleeper.core.schema.Schema;
 import sleeper.core.schema.type.IntType;
 import sleeper.core.statestore.FileReference;
+import sleeper.core.statestore.FileReferenceFactory;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
@@ -46,9 +42,11 @@ import static sleeper.configuration.properties.table.TablePropertiesTestHelper.c
 import static sleeper.configuration.properties.table.TableProperty.COMPACTION_FILES_BATCH_SIZE;
 import static sleeper.configuration.properties.table.TableProperty.TABLE_ID;
 import static sleeper.configuration.properties.table.TableProperty.TABLE_NAME;
+import static sleeper.core.schema.SchemaTestHelper.schemaWithKey;
 
 public class BasicCompactionStrategyTest {
 
+    private static final Schema DEFAULT_SCHEMA = schemaWithKey("key");
     private final InstanceProperties instanceProperties = createTestInstanceProperties();
     private final TableProperties tableProperties = createTestTablePropertiesWithNoSchema(instanceProperties);
 
@@ -58,6 +56,7 @@ public class BasicCompactionStrategyTest {
 
     @BeforeEach
     void setUp() {
+        instanceProperties.set(FILE_SYSTEM, "file://");
         instanceProperties.set(CONFIG_BUCKET, "bucket");
         instanceProperties.set(DATA_BUCKET, "databucket");
         tableProperties.set(TABLE_NAME, "table");
@@ -68,41 +67,26 @@ public class BasicCompactionStrategyTest {
     public void shouldCreateOneJobWhenOneLeafPartitionAndOnlyTwoFiles() {
         // Given
         tableProperties.set(COMPACTION_FILES_BATCH_SIZE, "2");
-        BasicCompactionStrategy basicCompactionStrategy = new BasicCompactionStrategy();
-        basicCompactionStrategy.init(instanceProperties, tableProperties);
-        Partition partition = Partition.builder()
-                .id("root")
-                .rowKeyTypes(new IntType())
-                .leafPartition(true)
-                .parentPartitionId(null)
-                .childPartitionIds(Collections.emptyList())
-                .build();
-        List<Partition> partitions = Collections.singletonList(partition);
-        List<FileReference> fileReferences = new ArrayList<>();
-        FileReference fileReference1 = FileReference.wholeFile()
-                .filename("file1")
-                .partitionId(partition.getId())
-                .numberOfRecords(100L)
-                .build();
-        fileReferences.add(fileReference1);
-        FileReference fileReference2 = FileReference.wholeFile()
-                .filename("file2")
-                .partitionId(partition.getId())
-                .numberOfRecords(100L)
-                .build();
-        fileReferences.add(fileReference2);
+        BasicCompactionStrategy strategy = new BasicCompactionStrategy();
+        strategy.init(instanceProperties, tableProperties);
+        PartitionsBuilder partitions = new PartitionsBuilder(DEFAULT_SCHEMA)
+                .singlePartition("root");
+        FileReferenceFactory factory = FileReferenceFactory.from(partitions.buildTree());
+        FileReference fileReference1 = factory.rootFile("file1", 100L);
+        FileReference fileReference2 = factory.rootFile("file2", 100L);
+        List<FileReference> fileReferences = List.of(fileReference1, fileReference2);
 
         // When
-        List<CompactionJob> compactionJobs = basicCompactionStrategy.createCompactionJobs(Collections.emptyList(), fileReferences, partitions);
+        List<CompactionJob> compactionJobs = strategy.createCompactionJobs(List.of(), fileReferences, partitions.buildList());
 
         // Then
         assertThat(compactionJobs).hasSize(1);
         CompactionJob expectedCompactionJob = jobForTable()
                 .jobId(compactionJobs.get(0).getId()) // Job id is a UUID so we don't know what it will be
-                .partitionId(partition.getId())
-                .inputFiles(Arrays.asList(fileReference1.getFilename(), fileReference2.getFilename()))
+                .partitionId("root")
+                .inputFiles(List.of("file1", "file2"))
                 .isSplittingJob(false)
-                .outputFile(instanceProperties.get(FILE_SYSTEM) + "databucket/table-id/partition_" + partition.getId() + "/" + compactionJobs.get(0).getId() + ".parquet")
+                .outputFile("file://databucket/table-id/partition_root/" + compactionJobs.get(0).getId() + ".parquet")
                 .iteratorClassName(null)
                 .iteratorConfig(null).build();
         assertThat(compactionJobs).containsExactly(expectedCompactionJob);
@@ -112,28 +96,19 @@ public class BasicCompactionStrategyTest {
     public void shouldCreateCorrectJobsWhenOneLeafPartitionAndLotsOfFiles() {
         // Given
         tableProperties.set(COMPACTION_FILES_BATCH_SIZE, "10");
-        BasicCompactionStrategy basicCompactionStrategy = new BasicCompactionStrategy();
-        basicCompactionStrategy.init(instanceProperties, tableProperties);
-        Partition partition = Partition.builder()
-                .id("root")
-                .rowKeyTypes(new IntType())
-                .leafPartition(true)
-                .parentPartitionId(null)
-                .childPartitionIds(Collections.emptyList())
-                .build();
-        List<Partition> partitions = Collections.singletonList(partition);
+        BasicCompactionStrategy strategy = new BasicCompactionStrategy();
+        strategy.init(instanceProperties, tableProperties);
+        PartitionsBuilder partitions = new PartitionsBuilder(DEFAULT_SCHEMA)
+                .singlePartition("root");
+        FileReferenceFactory factory = FileReferenceFactory.from(partitions.buildTree());
         List<FileReference> fileReferences = new ArrayList<>();
         for (int i = 0; i < 100; i++) {
-            FileReference fileReference = FileReference.wholeFile()
-                    .filename("file-" + i)
-                    .partitionId(partition.getId())
-                    .numberOfRecords(1_000_000L - i * 100L)
-                    .build();
+            FileReference fileReference = factory.rootFile("file-" + i, 1_000_000L - i * 100L);
             fileReferences.add(fileReference);
         }
 
         // When
-        List<CompactionJob> compactionJobs = basicCompactionStrategy.createCompactionJobs(Collections.emptyList(), fileReferences, partitions);
+        List<CompactionJob> compactionJobs = strategy.createCompactionJobs(List.of(), fileReferences, partitions.buildList());
 
         // Then
         assertThat(compactionJobs).hasSize(10).isEqualTo(IntStream.range(0, 10).mapToObj(i -> {
@@ -143,10 +118,10 @@ public class BasicCompactionStrategyTest {
             }
             return jobForTable()
                     .jobId(compactionJobs.get(i).getId()) // Job id is a UUID so we don't know what it will be
-                    .partitionId(partition.getId())
+                    .partitionId("root")
                     .inputFiles(inputFiles)
                     .isSplittingJob(false)
-                    .outputFile(instanceProperties.get(FILE_SYSTEM) + "databucket/table-id/partition_" + partition.getId() + "/" + compactionJobs.get(i).getId() + ".parquet")
+                    .outputFile("file://databucket/table-id/partition_root/" + compactionJobs.get(i).getId() + ".parquet")
                     .iteratorClassName(null)
                     .iteratorConfig(null).build();
         }).collect(Collectors.toList()));
@@ -156,32 +131,17 @@ public class BasicCompactionStrategyTest {
     public void shouldCreateNoJobsWhenNotEnoughFiles() {
         // Given
         tableProperties.set(COMPACTION_FILES_BATCH_SIZE, "5");
-        BasicCompactionStrategy basicCompactionStrategy = new BasicCompactionStrategy();
-        basicCompactionStrategy.init(instanceProperties, tableProperties);
-        Partition partition = Partition.builder()
-                .id("root")
-                .rowKeyTypes(new IntType())
-                .leafPartition(true)
-                .parentPartitionId(null)
-                .childPartitionIds(Collections.emptyList())
-                .build();
-        List<Partition> partitions = Collections.singletonList(partition);
-        List<FileReference> fileReferences = new ArrayList<>();
-        FileReference fileReference1 = FileReference.wholeFile()
-                .filename("file1")
-                .partitionId(partition.getId())
-                .numberOfRecords(100L)
-                .build();
-        fileReferences.add(fileReference1);
-        FileReference fileReference2 = FileReference.wholeFile()
-                .filename("file2")
-                .partitionId(partition.getId())
-                .numberOfRecords(100L)
-                .build();
-        fileReferences.add(fileReference2);
+        BasicCompactionStrategy strategy = new BasicCompactionStrategy();
+        strategy.init(instanceProperties, tableProperties);
+        PartitionsBuilder partitions = new PartitionsBuilder(DEFAULT_SCHEMA)
+                .singlePartition("root");
+        FileReferenceFactory factory = FileReferenceFactory.from(partitions.buildTree());
+        FileReference fileReference1 = factory.rootFile("file1", 100L);
+        FileReference fileReference2 = factory.rootFile("file2", 100L);
+        List<FileReference> fileReferences = List.of(fileReference1, fileReference2);
 
         // When
-        List<CompactionJob> compactionJobs = basicCompactionStrategy.createCompactionJobs(Collections.emptyList(), fileReferences, partitions);
+        List<CompactionJob> compactionJobs = strategy.createCompactionJobs(List.of(), fileReferences, partitions.buildList());
 
         // Then
         assertThat(compactionJobs).isEmpty();
@@ -192,95 +152,48 @@ public class BasicCompactionStrategyTest {
         // Given - 3 partitions (root and 2 children) - the child partition called "left" has files for 2 compaction
         // jobs, the "right" child partition only has files for 1 compaction job
         tableProperties.set(COMPACTION_FILES_BATCH_SIZE, "2");
-        BasicCompactionStrategy basicCompactionStrategy = new BasicCompactionStrategy();
-        basicCompactionStrategy.init(instanceProperties, tableProperties);
-        Partition rootPartition = Partition.builder()
-                .id("root")
-                .rowKeyTypes(new IntType())
-                .leafPartition(false)
-                .parentPartitionId(null)
-                .childPartitionIds(Arrays.asList("left", "right"))
-                .build();
-        Partition leftChild = Partition.builder()
-                .id("left")
-                .rowKeyTypes(new IntType())
-                .leafPartition(true)
-                .parentPartitionId("root")
-                .childPartitionIds(Collections.emptyList())
-                .build();
-        Partition rightChild = Partition.builder()
-                .id("right")
-                .rowKeyTypes(new IntType())
-                .leafPartition(true)
-                .parentPartitionId("root")
-                .childPartitionIds(Collections.emptyList())
-                .build();
-        List<Partition> partitions = Arrays.asList(rootPartition, leftChild, rightChild);
-        List<FileReference> fileReferences = new ArrayList<>();
-        FileReference fileReference1 = FileReference.wholeFile()
-                .filename("file1")
-                .partitionId("left")
-                .numberOfRecords(100L)
-                .build();
-        fileReferences.add(fileReference1);
-        FileReference fileReference2 = FileReference.wholeFile()
-                .filename("file2")
-                .partitionId("left")
-                .numberOfRecords(200L)
-                .build();
-        fileReferences.add(fileReference2);
-        FileReference fileReference3 = FileReference.wholeFile()
-                .filename("file3")
-                .partitionId("left")
-                .numberOfRecords(300L)
-                .build();
-        fileReferences.add(fileReference3);
-        FileReference fileReference4 = FileReference.wholeFile()
-                .filename("file4")
-                .partitionId("left")
-                .numberOfRecords(400L)
-                .build();
-        fileReferences.add(fileReference4);
-        FileReference fileReference5 = FileReference.wholeFile()
-                .filename("file5")
-                .partitionId("right")
-                .numberOfRecords(500L)
-                .build();
-        fileReferences.add(fileReference5);
-        FileReference fileReference6 = FileReference.wholeFile()
-                .filename("file6")
-                .partitionId("right")
-                .numberOfRecords(600L)
-                .build();
-        fileReferences.add(fileReference6);
+        BasicCompactionStrategy strategy = new BasicCompactionStrategy();
+        strategy.init(instanceProperties, tableProperties);
+        PartitionsBuilder partitions = new PartitionsBuilder(DEFAULT_SCHEMA)
+                .rootFirst("root")
+                .splitToNewChildren("root", "left", "right", 123L);
+        FileReferenceFactory factory = FileReferenceFactory.from(partitions.buildTree());
+        FileReference fileReference1 = factory.partitionFile("left", "file1", 100L);
+        FileReference fileReference2 = factory.partitionFile("left", "file2", 200L);
+        FileReference fileReference3 = factory.partitionFile("left", "file3", 300L);
+        FileReference fileReference4 = factory.partitionFile("left", "file4", 400L);
+        FileReference fileReference5 = factory.partitionFile("right", "file5", 500L);
+        FileReference fileReference6 = factory.partitionFile("right", "file6", 600L);
+        List<FileReference> fileReferences = List.of(
+                fileReference1, fileReference2, fileReference3, fileReference4, fileReference5, fileReference6);
 
         // When
-        List<CompactionJob> compactionJobs = basicCompactionStrategy.createCompactionJobs(Collections.emptyList(), fileReferences, partitions);
+        List<CompactionJob> compactionJobs = strategy.createCompactionJobs(List.of(), fileReferences, partitions.buildList());
 
         // Then
         assertThat(compactionJobs).hasSize(3);
         CompactionJob expectedCompactionJob1 = jobForTable()
                 .jobId(compactionJobs.get(0).getId()) // Job id is a UUID so we don't know what it will be
                 .partitionId("left")
-                .inputFiles(Arrays.asList(fileReference1.getFilename(), fileReference2.getFilename()))
+                .inputFiles(List.of("file1", "file2"))
                 .isSplittingJob(false)
-                .outputFile(instanceProperties.get(FILE_SYSTEM) + "databucket/table-id/partition_left/" + compactionJobs.get(0).getId() + ".parquet")
+                .outputFile("file://databucket/table-id/partition_left/" + compactionJobs.get(0).getId() + ".parquet")
                 .iteratorClassName(null)
                 .iteratorConfig(null).build();
         CompactionJob expectedCompactionJob2 = jobForTable()
                 .jobId(compactionJobs.get(1).getId()) // Job id is a UUID so we don't know what it will be
                 .partitionId("left")
-                .inputFiles(Arrays.asList(fileReference3.getFilename(), fileReference4.getFilename()))
+                .inputFiles(List.of("file3", "file4"))
                 .isSplittingJob(false)
-                .outputFile(instanceProperties.get(FILE_SYSTEM) + "databucket/table-id/partition_left/" + compactionJobs.get(1).getId() + ".parquet")
+                .outputFile("file://databucket/table-id/partition_left/" + compactionJobs.get(1).getId() + ".parquet")
                 .iteratorClassName(null)
                 .iteratorConfig(null).build();
         CompactionJob expectedCompactionJob3 = jobForTable()
                 .jobId(compactionJobs.get(2).getId()) // Job id is a UUID so we don't know what it will be
                 .partitionId("right")
-                .inputFiles(Arrays.asList(fileReference5.getFilename(), fileReference6.getFilename()))
+                .inputFiles(List.of("file5", "file6"))
                 .isSplittingJob(false)
-                .outputFile(instanceProperties.get(FILE_SYSTEM) + "databucket/table-id/partition_right/" + compactionJobs.get(2).getId() + ".parquet")
+                .outputFile("file://databucket/table-id/partition_right/" + compactionJobs.get(2).getId() + ".parquet")
                 .iteratorClassName(null)
                 .iteratorConfig(null).build();
         assertThat(compactionJobs).containsExactly(
@@ -294,62 +207,27 @@ public class BasicCompactionStrategyTest {
         Schema schema = Schema.builder().rowKeyFields(field).build();
         tableProperties.set(COMPACTION_FILES_BATCH_SIZE, "2");
         tableProperties.setSchema(schema);
-        BasicCompactionStrategy basicCompactionStrategy = new BasicCompactionStrategy();
-        basicCompactionStrategy.init(instanceProperties, tableProperties);
-        Range rootRange = new RangeFactory(schema).createRange(field, Integer.MIN_VALUE, null);
-        Partition rootPartition = Partition.builder()
-                .id("root")
-                .rowKeyTypes(new IntType())
-                .leafPartition(false)
-                .parentPartitionId(null)
-                .childPartitionIds(Arrays.asList("left", "right"))
-                .region(new Region(rootRange))
-                .dimension(0)
-                .build();
-        Range leftRange = new RangeFactory(schema).createRange(field, Integer.MIN_VALUE, 10);
-        Partition leftChild = Partition.builder()
-                .id("left")
-                .rowKeyTypes(new IntType())
-                .leafPartition(true)
-                .parentPartitionId("root")
-                .childPartitionIds(Collections.emptyList())
-                .region(new Region(leftRange))
-                .build();
-        Range rightRange = new RangeFactory(schema).createRange(field, 10, null);
-        Partition rightChild = Partition.builder()
-                .id("right")
-                .rowKeyTypes(new IntType())
-                .leafPartition(true)
-                .parentPartitionId("root")
-                .childPartitionIds(Collections.emptyList())
-                .region(new Region(rightRange))
-                .build();
-        List<Partition> partitions = Arrays.asList(rootPartition, leftChild, rightChild);
-        List<FileReference> fileReferences = new ArrayList<>();
-        FileReference fileReference1 = FileReference.wholeFile()
-                .filename("file1")
-                .partitionId("root")
-                .numberOfRecords(100L)
-                .build();
-        fileReferences.add(fileReference1);
-        FileReference fileReference2 = FileReference.wholeFile()
-                .filename("file2")
-                .partitionId("root")
-                .numberOfRecords(200L)
-                .build();
-        fileReferences.add(fileReference2);
+        BasicCompactionStrategy strategy = new BasicCompactionStrategy();
+        strategy.init(instanceProperties, tableProperties);
+        PartitionsBuilder partitions = new PartitionsBuilder(schema)
+                .singlePartition("root")
+                .splitToNewChildren("root", "left", "right", 10);
+        FileReferenceFactory factory = FileReferenceFactory.from(partitions.buildTree());
+        FileReference fileReference1 = factory.rootFile("file1", 100L);
+        FileReference fileReference2 = factory.rootFile("file2", 200L);
+        List<FileReference> fileReferences = List.of(fileReference1, fileReference2);
 
         // When
-        List<CompactionJob> compactionJobs = basicCompactionStrategy.createCompactionJobs(Collections.emptyList(), fileReferences, partitions);
+        List<CompactionJob> compactionJobs = strategy.createCompactionJobs(List.of(), fileReferences, partitions.buildList());
 
         // Then
         assertThat(compactionJobs).hasSize(1);
         CompactionJob expectedCompactionJob = jobForTable()
                 .jobId(compactionJobs.get(0).getId()) // Job id is a UUID so we don't know what it will be
                 .partitionId("root")
-                .inputFiles(Arrays.asList(fileReference1.getFilename(), fileReference2.getFilename()))
+                .inputFiles(List.of("file1", "file2"))
                 .isSplittingJob(true)
-                .childPartitions(Arrays.asList("left", "right"))
+                .childPartitions(List.of("left", "right"))
                 .iteratorClassName(null)
                 .iteratorConfig(null).build();
         assertThat(compactionJobs).containsExactly(expectedCompactionJob);
